Add memo:Option<String> to transaction model and frontend

--- a/frontend/src/rust-and-polymer-app/rust-and-polymer-app.html
+++ b/frontend/src/rust-and-polymer-app/rust-and-polymer-app.html
@@ -24,7 +24,7 @@
 
     <h2>Transactions from Rust:</h2>
     <template is="dom-repeat" items="[[_transactions]]">
-      <p>[[item.timestamp]] [[item.amount]]</p>
+      <p>[[item.timestamp]] [[item.amount]] [[item.memo]]</p>
     </template>
 
     <paper-input value="{{_payeeName}}"></paper-input>
